--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
+    "axios": "^0.24.0",
     "next": "latest",
+    "prismic-dom": "^2.2.6",
+    "prismic-javascript": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
