--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
