Added slider to services page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@prismicio/client": "^5.1.0",
     "axios": "^0.24.0",
     "framer-motion": "^5.0.1",
-    "next": "latest",
+    "keen-slider": "^6.4.1",
+    "next": "^12.0.7",
     "prismic-dom": "^2.2.6",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
